// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Shape > rendering > should render the ellipse shape based on oval type 1`] = `
<body>
  <div>
    <g
      class="shape-container oval"
      data-shape-type="oval"
    >
      <ellipse
        class="shape"
      />
      <rect
        class="hitbox"
        height="NaN"
        width="NaN"
        x="NaN"
        y="NaN"
      />
      
      
      
    </g>
    
    
  </div>
</body>
`;

exports[`Shape > rendering > should render the line shape based on line type 1`] = `
<body>
  <div>
    <g
      class="shape-container line"
      data-shape-type="line"
    >
      <line
        class="shape"
      />
      <line
        class="line-hitbox"
      />
      <line
        class="bounding"
      />
      
      
    </g>
    
    
  </div>
</body>
`;

exports[`Shape > rendering > should render the path shape based on brush type 1`] = `
<body>
  <div>
    <g
      class="shape-container brush"
      data-shape-type="brush"
    >
      <path
        class="shape"
      />
      
      
      
    </g>
    
    
  </div>
</body>
`;

exports[`Shape > rendering > should render the rect shape based on rectangle type 1`] = `
<body>
  <div>
    <g
      class="shape-container rectangle"
      data-shape-type="rectangle"
    >
      <rect
        class="shape"
      />
      
      
      
    </g>
    
    
  </div>
</body>
`;
